# ai-agents

./: .gitignore  main.py
crew_ai/github_analyzer/: README.md  pyproject.toml  report.md
crew_ai/github_analyzer/output/: security_report.md  tech_stack_report.md
crew_ai/github_analyzer/src/github_analyzer/: crew.py  main.py
crew_ai/github_analyzer/src/github_analyzer/config/: agents.yaml  tasks.yaml
crew_ai/github_analyzer/src/github_analyzer/tools/: clone_tool.py
langgraph/: app.py  async_langgraph.py  async_langgraph2.py  requirements.txt
models/: evaluation.py
tool_calling/: README.md  main.py  requirements.txt
