[project]
name = "github_analyzer"
version = "0.1.0"
description = "github_analyzer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
github_analyzer = "github_analyzer.main:run"
run_crew = "github_analyzer.main:run"
train = "github_analyzer.main:train"
replay = "github_analyzer.main:replay"
test = "github_analyzer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
